<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/presence_status"
            />
            <Spinner android:id="@+id/presence_status_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/presence_tagline"
            />
            <EditText android:id="@+id/presence_tagline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
           />
           <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/presence_language"
            />
            <Spinner android:id="@+id/presence_language_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
            />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/presence_duration"
            />
            <Spinner android:id="@+id/presence_duration_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
            />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/presence_timeframe"
            />
            <Spinner android:id="@+id/presence_timeframe_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
            />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/presence_security"
            />
            <Spinner android:id="@+id/presence_security_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/presence_interest"
            />
             <EditText android:id="@+id/presence_interest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
           />
            
           <Button 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/presence_ok"
                android:text="@string/presence_ok"
           />
        </LinearLayout>
    </ScrollView>
        
</LinearLayout>