<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/interest_subject"
            />
            <EditText android:id="@+id/interest_subject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
           />
           <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/interest_action"
            />
            <EditText android:id="@+id/interest_action"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
           />
           <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/interest_mood"
            />
            <EditText android:id="@+id/interest_mood"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
           />
           <Button 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/interest_ok"
                android:text="@string/interest_ok"
           />
        </LinearLayout>
    </ScrollView>
        
</LinearLayout>