<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_birthdate"
            />
            <EditText android:id="@+id/profile_birthdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:editable="false"
           />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_sex"
            />
            <Spinner android:id="@+id/profile_sex_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
            />
             <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_sex_orientation"
            />
            <Spinner android:id="@+id/profile_sex_orientation_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
            />
           <Button 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_ok"
                android:text="@string/profile_ok"
           />
        </LinearLayout>
    </ScrollView>
        
</LinearLayout>